--- a/ui/style.css
+++ b/ui/style.css
@@ -19,4 +19,12 @@ body {
 .img-medium {
     height: 200px;
 }
-
+ .container{
+ max-width: 800px;
+    margin: 0 auto;
+    color: black;
+    font-family: optima;
+    padding-top: 60px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
